# DIMA

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: create-release.yml  docker.yml  misp.yml  pages.yml  tests.yml  zip-plugin.yml
ACT/: ACT.md
DETECT/: DETECT.json  DETECT.md
INFORM/: INFORM.json  INFORM.md
MEMORISE/: MEMORISE.json  MEMORISE.md
analyse/: Rokk_Solis.json
article/: article.tex
docker/: Dockerfile  nginx.conf
docs/: DIMA_navigator.html  index.html
docs/data/: ACT.json  DETECT.json  INFORM.json  MEMORISE.json
misp/clusters/: dima.json
misp/galaxies/: dima.json
plugin/plugin_chrome/: Calcul_score_doc_technique.md  Documentation_technique.md  content.js  instal.md  install.md  manifest.json
plugin/plugin_chrome/fichiers à télécharger/: install.md
plugin/plugin_chrome/fichiers à télécharger/Plugin-dima/: content.js  manifest.json
plugin/plugin_chrome/fichiers à télécharger/Plugin-dima/data/: keywords.js  techniques.js
plugin/plugin_chrome/fichiers à télécharger/Plugin-dima/modules/: techniqueAnalyzer.js
plugin/plugin_chrome/releases/Plugin-dima/: content.js  manifest.json
plugin/plugin_chrome/releases/Plugin-dima/data/: keywords.js  techniques.js
plugin/plugin_chrome/releases/Plugin-dima/data/databases/: Baybridge.js  Copycop.js  Doppelganger.js  PortalKombat.js  Pravda.js  (+3 more)
plugin/plugin_chrome/releases/Plugin-dima/modules/: Suspicioussitesmanager.js  contentExtractor.js  techniqueAnalyzer.js  uiManager.js
src/: dima_convert.py
src/tests/: test_dima_convert.py
tests/: test_dima_convert.py
